# ZeroClue

./: .env.example  .gitignore  .receiver_x25519.pk  .receiver_x25519.sk  .sender_x25519.pk  .sender_x25519.sk  API_DOCS.md  API_ROUTES.md  APK_Issue_Plan.md  BUILD_STATUS.md  CURRENT_STATE_ASSESSMENT.txt  Cargo.toml  DATABASE_SETUP.md  DOWNLOAD_ISSUE_ANALYSIS.md  HOW_TO_RUN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_FINAL.md  Makefile  QUICKSTART.md  README.md  RUNNING_THE_SERVER.md  START_APP.sh  TESTING.md  TEST_SUMMARY.md  VERIFY.md  bootstrap.sh  docker-compose.yml  invite_token.txt  package-lock.json  package.json  run-server.sh  start-server.sh
admin_cli/: Cargo.toml
admin_cli/src/: main.rs
client_demo/: Cargo.toml
client_demo/src/: main.rs
db-init/: 01-init.sql
mls_demo/: Cargo.toml
mls_demo/src/: main.rs
scripts/: build-all.sh  build-and-copy.sh  build_android_apk.sh  copy-ui-to-android.js  db-backup.sh  db-reset.sh  db-setup.sh  local_smoke.sh  setup_dev_account.sh  test_provision.sh
server/: Cargo.toml
server/migrations/: 0001_init.sql  0002_crypto.sql  0003_device_auth.sql  0004_indexes.sql  0005_dev_index.sql  0006_mvp_chat.sql  0007_add_password.sql  0008_add_inviter_to_tokens.sql  0009_bcrypt_password_hash.sql  0009_nullable_user_for_invites.sql
server/src/: auth.rs  main.rs
server/src/routes/: auth.rs  dev.rs  download.rs  friends.rs  invite.rs  messages_extra.rs  mod.rs  signup.rs
server/static/: invite.html
server/static/downloads/android/: version.json
server/static/downloads/windows/: .gitkeep
tooling/: Cargo.toml
zerochat-android/: build.gradle  settings.gradle
zerochat-android/app/: build.gradle  proguard-rules.pro
zerochat-android/app/src/main/: AndroidManifest.xml
zerochat-android/app/src/main/assets/www/: index.html
zerochat-android/app/src/main/assets/www/assets/: dialog-VqP3d6bM.js  fs-CEobalJo.js  index-B2154Wt-.js  index-B2154Wt-.js.map  index-BTmlantz.js  index-BmDE2DLf.js  index-C7AuBGEL.js  index-C7AuBGEL.js.map  index-CnggqqZl.js  index-CwBv3jdC.js  index-CwBv3jdC.js.map  index-DGK3gWga.css  index-DJU-j80k.js  index-DYVJAqzq.js  index-DYVJAqzq.js.map  index-DzGeR1bX.js  index-DzrPKbPw.js  index-DzrPKbPw.js.map  shell-BKwI7gYc.js  tauri-DOt0uGIP.js
zerochat-android/app/src/main/java/com/zerochat/app/: MainActivity.kt  SharedPrefsHelper.kt  ZeroChatBridge.kt
zerochat-android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
zerochat-desktop/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
zerochat-desktop/scripts/: check-dmg.js  copy-dmg-to-server.js
zerochat-desktop/src/: App.tsx  config.ts  main.ts  main.tsx  style.css
zerochat-desktop/src-tauri/: Cargo.toml  tauri.conf.json
zerochat-desktop/src-tauri/src/: lib.rs  main.rs
zerochat-desktop/src/api/: index.ts  interfaces.ts
zerochat-desktop/src/api/adapters/: api.android.ts  api.desktop.ts  api.web.ts
zerochat-desktop/src/hooks/: useAuth.ts  useAuth.tsx  useChatList.ts  useInviteToken.ts  useKeyboardShortcuts.ts  useMessages.ts
zerochat-desktop/src/lib/: api.ts  cache.ts  files.ts  offline.ts  time.ts
zerochat-desktop/src/services/: api.ts  bridge.ts
zerochat-desktop/src/state/: chatListStore.ts  messagesStore.ts  wsClient.ts
zerochat-desktop/src/ui/: AppShell.tsx  AttachmentTile.tsx  ChatList.tsx  ChatListVirtualized.tsx  ChatRow.tsx  ChatView.tsx  Composer.tsx  LinkPreview.tsx  Message.tsx  OnboardingScreen.tsx  Reactions.tsx  SettingsMenu.tsx  Typing.tsx  theme.css
zerochat-desktop/src/utils/: dayjs.ts
