[package]
name = "mls_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
openmls = "0.7"
openmls_rust_crypto = "0.4.1"
openmls_basic_credential = "0.4"
tls_codec = { version = "0.4", features = ["derive"] }
rand = "0.8"
