[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls","postgres","uuid","time","migrate"] }
uuid = { version = "1", features = ["v4","serde"] }
time = { version = "0.3", features = ["macros","serde","formatting"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
argon2 = "0.5"
redis = { version = "0.25", features = ["tokio-comp","connection-manager"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-util = { version = "0.7", features = ["io"] }
